2003-02-28  Bradley Bell  <btb@icculus.org>

	* 2d/pcx.c, arch/ogl/gr.c, main/inferno.c, main/movie.c,
	main/newmenu.c: Fixed many opengl glitches

2003-02-27  Bradley Bell  <btb@icculus.org>

	* main/Makefile.am, main/gamesave.c, main/hoard.c, main/hoard.h,
	main/inferno.c, main/menu.c, main/mission.c, main/mission.h,
	main/network.c, main/network.h: noted that hoard.ham is only needed
	for multiplayer HOARD games, and should not be equated with
	"vertigo". put HoardEquipped() back in network.c.

	* arch/ggi/key.c, arch/sdl/key.c, arch/svgalib/key.c,
	include/d_delay.h, main/automap.c, main/game.c, main/kconfig.c,
	main/multi.c, main/newdemo.c, misc/Makefile.am, misc/d_delay.c:
	use timer_delay instead of d_delay

2003-02-27  Martin Schaffner <maschaffner@gmx.ch>

	* main/render.c: added replacement qsort for solaris

2003-02-26  Bradley Bell  <btb@icculus.org>

	* main/gamemine.c: texture conversion for d1 shareware

2003-02-26  Martin Schaffner <maschaffner@gmx.ch>

	* main/gamemine.c: better texture conversion for d1 levels

2003-02-26  Micah J. Lieske  <MicahJon@compuserve.com>

	* main/kconfig.c: fix joystick support under MinGW

2003-02-26  Bradley Bell  <btb@icculus.org>

	* main/playsave.c: fix swapping glitch

	* NEWS, configure.ac, readme.txt: clean stuff up, getting ready
	for 0.2.0 release

	* main/titles.c: begin support for rendering spinning robots in
	briefings

	* main/mission.c, main/mission.h: load d1 oem mission, d1 v1.0
	mission

	* main/gamemine.c: load d1 shareware levels!

2003-02-25  Bradley Bell  <btb@icculus.org>

	* TODO: update

	* autogen.sh: add warning about old auto* versions, use
	automake --copy

2003-02-24  Bradley Bell <btb@icculus.org>

	* main/gameseq.c, main/movies.c, main/titles.c: Descent I
	briefings mostly working
	* main/movie.c, main/titles.c: fixed some more briefing glitches

2003-02-23  Bradley Bell <btb@icculus.org>

	* main/movie.c: fixed crash when using shareware data files
	without -nohires