@@ -234,6 +234,9 @@ try_again:;
 					mouse_set_mode(1);				//re-enable centering mode
 					HideCursorW();
 					#endif
+#ifdef OGL
+					Screen_mode = -1;
+#endif
 					PlayMovie("intro.mve",0);
 					songs_play_song(SONG_TITLE,1);
 					*last_key = -3; //exit menu to force redraw even if not going to game mode. -3 tells menu system not to restore
